--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>This is Kim Streicher's Page.</h1>
-</body>
+  <h1>This is Kim Streicher's Page!</h1>
+  <h3>Codeworks day-2</h3>
 
 </html>
